# OpenMini-V1

./: .actrc  .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_GUIDE.md  Dockerfile  OPTIMIZATION_SUMMARY.md  PROGRESS_REPORT.md  README.md  RELEASE_NOTES.md  SECURITY.md  chat.py  cleanup.py  docker-compose.yml  rust-project.json
openmini-admin/: Cargo.toml
openmini-admin/config/: admin.toml
openmini-admin/data/: admin.db
openmini-admin/src/: config.rs  error.rs  lib.rs  main.rs
openmini-admin/src/api/: alert.rs  apikey.rs  audit.rs  auth.rs  config.rs  metrics.rs  mod.rs  model.rs  service.rs  session.rs  user.rs
openmini-admin/src/auth/: jwt.rs  middleware.rs
openmini-admin/src/db/: migrations.rs  mod.rs  models.rs
openmini-admin/src/services/: mod.rs  proxy.rs
openmini-server/: Cargo.toml  build.rs
openmini-server/benches/: exo_bench.rs  high_perf_pipeline_bench.rs  inference_bench.rs  metal_bench.rs  performance_bench.rs  vulkan_bench.rs
openmini-server/bindings/: ApiError.ts  AppError.ts  ChatChoice.ts  ChatCompletionChunk.ts  ChatCompletionRequest.ts  ChatCompletionResponse.ts  ChatMessage.ts  ComponentHealth.ts  ConfigError.ts  CoreSettings.ts  DatabaseSettings.ts  DeltaChoice.ts  DeltaContent.ts  EngineError.ts  EngineSettings.ts  GrpcSettings.ts  HardwareError.ts  HealthCheckResponse.ts  HealthCheckerConfig.ts  HealthStatus.ts  ImageUnderstandRequest.ts  ImageUnderstandResponse.ts  MemorySettings.ts  MoESettings.ts  ModelInfo.ts  ModelSettings.ts  SchedulerSettings.ts  ServerConfig.ts  ServerSettings.ts  SttRequest.ts  SttResponse.ts  ThreadPoolSettings.ts  TrainingError.ts  TtsRequest.ts  TtsResponse.ts  UsageInfo.ts  VisionSettings.ts  WorkerError.ts  WorkerSettings.ts
openmini-server/native/: CMakeLists.txt
openmini-server/native/include/: openmini.h
openmini-server/src/: error.rs  lib.rs  main.rs  openmini.rs
openmini-server/src/api/: training.rs
openmini-server/src/benchmark/: config.rs  export.rs  metrics.rs  mod.rs  runner.rs  scenarios.rs
openmini-server/src/benchmark/ci/: regression.rs
openmini-server/src/config/: config.rs  mod.rs  settings.rs
openmini-server/src/db/: memory.rs  message.rs  mod.rs  pool.rs  session.rs
openmini-server/src/distributed/: communication.rs  config.rs  discovery.rs  exo_communication.rs  exo_dynamic_adjuster.rs  exo_parallel_strategy.rs  mod.rs  router.rs  tp.rs
openmini-server/src/enterprise/: audit.rs  auth.rs  mod.rs  rbac.rs  sla.rs
openmini-server/src/hardware/: detector.rs  device.rs  hyperthreading.rs  load_monitor.rs  mod.rs  profile.rs  resource_manager.rs  scheduler.rs  tests.rs
openmini-server/src/hardware/cpu/: avx.rs  blas.rs  mod.rs  neon.rs
openmini-server/src/hardware/ess/: cache.rs  eviction.rs  mod.rs  prefetch.rs  transfer.rs
openmini-server/src/hardware/gpu/: cuda.rs  metal.rs  mod.rs  vulkan.rs  vulkan_compute.rs
openmini-server/src/hardware/kernel/: mod.rs
openmini-server/src/hardware/kv_cache/: block.rs  block_manager.rs  continuous_batch.rs  mod.rs  page_table.rs  paged_cache.rs  persistence.rs  prefix_cache.rs  streaming.rs
openmini-server/src/hardware/memory/: adaptive.rs  arena.rs  memory.rs  mmap.rs  mod.rs  monitor.rs  pool.rs
openmini-server/src/hardware/persistence/: compression.rs  database.rs  eviction_policy.rs  kv_swap.rs  mod.rs
openmini-server/src/hardware/simd/: arm.rs  faster_impl.rs  mod.rs  native.rs  x86.rs
openmini-server/src/kernel/: executor.rs  mod.rs  ops.rs
openmini-server/src/kernel/cpu/: mod.rs  quantized.rs  simd.rs  simd_softmax.rs
openmini-server/src/kernel/cuda/: kernels.cu  kernels.rs  memory.rs  mod.rs
openmini-server/src/kernel/metal/: batch.rs  memory.rs  mod.rs  shaders.metal
openmini-server/src/logging/: json_logger.rs  log_sampler.rs  mod.rs  structured_fields.rs
openmini-server/src/model/: mod.rs
openmini-server/src/model/inference/: ahn.rs  attn_res.rs  calm.rs  context.rs  continuous_batching.rs  distributed_inference_config.rs  distributed_inference_engine.rs  dsa.rs  engine.rs  error.rs  flash_attention_3.rs  fp8.rs  gemm_engine.rs  generator.rs  gguf.rs  high_performance_pipeline.rs  image_preprocess.rs  inference.rs  kascade.rs  mhc.rs  mod.rs  model.rs  mtp.rs  native_top_k.rs  nsa.rs  pipeline.rs  quant.rs  quant_loader.rs  quant_simd.rs  ring_flash_linear.rs  sampler.rs  sliding_window.rs  speculative.rs  speculative_decoding_v2.rs  tokenizer.rs  tpa.rs
openmini-server/src/monitoring/: business_metrics.rs  health_check.rs  metrics.rs  mod.rs  prometheus_exporter.rs
openmini-server/src/rl/: actor.rs  grpo.rs  keep_routing.rs  keep_sampling_mask.rs  mod.rs  reward.rs
openmini-server/src/service/: core_actor.rs  hot_reload.rs  mod.rs  router.rs
openmini-server/src/service/distributed/: coordinator.rs  mesh.rs  mod.rs  protocol.rs  worker.rs
openmini-server/src/service/grpc/: client.rs  mod.rs  openmini_grpc.rs  server.rs  types.rs
openmini-server/src/service/http/: handlers.rs  inference_handlers.rs  inference_types.rs  middleware.rs  mod.rs  sensitive_filter.rs  server.rs  types.rs
openmini-server/src/service/scheduler/: mod.rs
openmini-server/src/service/server/: connection.rs  gateway.rs  mod.rs
openmini-server/src/service/thread/: mod.rs  (+2 more)
openmini-server/src/training/: amp.rs  autograd.rs  checkpoint.rs  config.rs  dataloader.rs  distributed_config.rs  loss.rs  mod.rs  monitor.rs  optimizer.rs  pipeline.rs  safetensors.rs  tokenizer.rs  trainer.rs
openmini-server/src/types/: mod.rs
openmini-server/tests/: concurrent_stress_test.rs  config_validation.rs  cuda_validation_test.rs  dsa_bench.rs  dsa_integration_test.rs  e2e_full_lifecycle.rs  e2e_inference_test.rs  e2e_validation_simple.rs  e2e_validation_test.rs  exo_architecture_integration_test.rs  flash_attention_3_test.rs  gpu_e2e_test.rs  integration_test.rs  kv_cache_bench.rs  memory_leak_test.rs  metal_validation_test.rs  monitoring_test.rs  paged_kv_cache_test.rs  quant_simd_regression_test.rs  stress_test.rs  unified_compute_test.rs  vulkan_validation_test.rs  worker_fault_tolerance.rs
(+184 files in other folders)
