[workspace]
members = [ "openmini-admin",
    "openmini-proto",
    "openmini-server",
]
resolver = "2"

[workspace.lints.rust]
missing_docs = "allow"
dead_code = "allow"

[workspace.package]
version = "1.1.0"
edition = "2021"
authors = ["OpenMini Team"]
license = "MIT"

[workspace.dependencies]
candle-core = "0.7"
candle-transformers = "0.7"
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
memmap2 = "0.9"
rayon = "1"
crossbeam = "0.8"
parking_lot = "0.12"
async-channel = "2"
num_cpus = "1"

# [patch.crates-io]
# core2 = { git = "https://github.com/dignifiedquire/core2", rev = "v0.4.0" }
