[package]
name = "openmini-server"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[features]
metal = ["dep:metal", "dep:objc", "candle-core", "candle-core/metal"]
default = []
nightly_avx512 = []
cuda = ["dep:cudarc"]
vulkan = ["dep:ash", "dep:naga"]
blas-openblas = ["dep:cblas", "dep:blas-src"]
blas-mkl = ["dep:cblas", "dep:intel-mkl-src"]
grpc = ["dep:tonic", "dep:prost", "dep:prost-build", "dep:tokio-stream"]
monitoring = ["dep:reqwest"]
compression = ["zstd", "lz4"]
candle = ["candle-core"]
distributed = []  # 分布式推理模块（基于 Tokio Mesh）

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
ndarray = "0.16"
rayon = "1.10"
rustfft = "6.2"
ash = { version = "0.38", optional = true }
naga = { version = "23", optional = true, features = ["glsl-in", "spv-out"] }
cudarc = { version = "0.12", optional = true, features = ["cuda-12050", "cublas", "driver"] }
metal = { version = "0.28", optional = true }
objc = { version = "0.2", optional = true }
cblas = { version = "0.4", optional = true }
blas-src = { version = "0.10", optional = true, features = ["openblas"] }
intel-mkl-src = { version = "0.8", optional = true, features = ["mkl-static-lp64-seq"] }
num_cpus = "1.17"
glob = "0.3"
libc = "0.2"
clap = { version = "4.5", features = ["derive"] }
config = "0.14"
once_cell = "1.21"
parking_lot = "0.12"
dashmap = "5.5"
lru = "0.12"
memmap2 = "0.9"
rand = "0.8"
half = { version = "2.4", features = ["bytemuck"] }
bytemuck = { version = "1.18", features = ["extern_crate_alloc"] }
bytes = "1.9"
crossbeam = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
futures = "0.3"
toml = "0.8"
tonic = { version = "0.12", optional = true }
prost = { version = "0.13", optional = true }
prost-build = { version = "0.13", optional = true }
tokio-stream = { version = "0.1", optional = true }
prometheus = "0.13"
lazy_static = "1.4"
regex = "1"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout", "limit", "request-id"] }
tower = "0.5"
base64 = "0.22"
async-stream = "0.3"
async-trait = "0.1"
# libp2p = { git = "https://github.com/libp2p/rust-libp2p", features = ["tcp", "dns", "noise", "yamux", "identify", "kad", "mdns", "rendezvous"] }

# [patch.crates-io]
# core2 = { git = "https://github.com/dignifiedquire/core2", rev = "v0.4.0" }

chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.30"
log = "0.4"
reqwest = { version = "0.12", features = ["json"], optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }
zstd = { version = "0.13", optional = true }
lz4 = { version = "1.24", optional = true }
ts-rs = { version = "8.0", features = ["serde-compat"] }
candle-core = { version = "0.8", default-features = false, optional = true }

[build-dependencies]
prost-build = "0.13"

[[bench]]
name = "inference_bench"
harness = false

[[bench]]
name = "metal_bench"
harness = false
required-features = ["metal"]

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
approx = "0.5"
